test/scc_test/exp/semantic-errors/101.a
101.t:5:10: error: expression must have arithmetic type